Src/Newt/NewtonDynamics/Import/Newton.h

  #define dFloat double
  #define dFloat float
typedef struct NewtonBody{} NewtonBody;
typedef struct NewtonWorld{} NewtonWorld;
typedef struct NewtonCollision{} NewtonCollision;
typedef void (*NewtonBodyDestructor) (const NewtonBody* const body);
typedef void (*NewtonApplyForceAndTorque) (const NewtonBody* const body, dFloat timestep, int threadIndex);
typedef void (*NewtonSetTransform) (const NewtonBody* const body, const dFloat* const matrix, int threadIndex);
typedef void (*NewtonCollisionIterator) (void* const userData, int vertexCount, const dFloat* const faceArray, int faceId);
// **********************************************************************************************
//
// General purpose collision library functions
//
// **********************************************************************************************
NEWTON_API int NewtonCollisionPointDistance (const NewtonWorld* const newtonWorld, const dFloat* const point,
                       const NewtonCollision* const collision, const dFloat* const matrix, dFloat* const contact, dFloat* const normal, int threadIndex);
NEWTON_API int NewtonCollisionClosestPoint (const NewtonWorld* const newtonWorld,
                      const NewtonCollision* const collisionA, const dFloat* const matrixA, const NewtonCollision* const collisionB, const dFloat* const matrixB,
                      dFloat* const contactA, dFloat* const contactB, dFloat* const normalAB, int threadIndex);
NEWTON_API int NewtonCollisionCollide (const NewtonWorld* const newtonWorld, int maxSize,
                     const NewtonCollision* const collisionA, const dFloat* const matrixA,
                     const NewtonCollision* const collisionB, const dFloat* const matrixB,
                     dFloat* const contacts, dFloat* const normals, dFloat* const penetration, int threadIndex);
NEWTON_API int NewtonCollisionCollideContinue (const NewtonWorld* const newtonWorld, int maxSize, const dFloat timestep,
                         const NewtonCollision* const collisionA, const dFloat* const matrixA, const dFloat* const velocA, const dFloat* omegaA,
                         const NewtonCollision* const collisionB, const dFloat* const matrixB, const dFloat* const velocB, const dFloat* const omegaB,
                         dFloat* const timeOfImpact, dFloat* const contacts, dFloat* const normals, dFloat* const penetration, int threadIndex);
NEWTON_API void NewtonCollisionSupportVertex (const NewtonCollision* const collision, const dFloat* const dir, dFloat* const vertex);
NEWTON_API dFloat NewtonCollisionRayCast (const NewtonCollision* const collision, const dFloat* const p0, const dFloat* const p1, dFloat* const normal, int* const attribute);
NEWTON_API void NewtonCollisionCalculateAABB (const NewtonCollision* const collision, const dFloat* const matrix, dFloat* const p0, dFloat* const p1);
NEWTON_API void NewtonCollisionForEachPolygonDo (const NewtonCollision* const collision, const dFloat* const matrix, NewtonCollisionIterator callback, void* const userData);
// **********************************************************************************************
//
// transforms utility functions
//
// **********************************************************************************************
NEWTON_API void NewtonGetEulerAngle (const dFloat* const matrix, dFloat* const eulersAngles);
NEWTON_API void NewtonSetEulerAngle (const dFloat* const eulersAngles, dFloat* const matrix);
NEWTON_API dFloat NewtonCalculateSpringDamperAcceleration (dFloat dt, dFloat ks, dFloat x, dFloat kd, dFloat s);
// **********************************************************************************************
//
// body manipulation functions
//
// **********************************************************************************************
NEWTON_API NewtonBody* NewtonCreateBody (const NewtonWorld* const newtonWorld, const NewtonCollision* const collision, const dFloat* const matrix);
NEWTON_API void  NewtonDestroyBody(const NewtonWorld* const newtonWorld, const NewtonBody* const body);
NEWTON_API void  NewtonBodyAddForce (const NewtonBody* const body, const dFloat* const force);
NEWTON_API void  NewtonBodyAddTorque (const NewtonBody* const body, const dFloat* const torque);
NEWTON_API void  NewtonBodyCalculateInverseDynamicsForce (const NewtonBody* const body, dFloat timestep, const dFloat* const desiredVeloc, dFloat* const forceOut);
NEWTON_API void  NewtonBodySetMatrix (const NewtonBody* const body, const dFloat* const matrix);
NEWTON_API void  NewtonBodySetMatrixRecursive (const NewtonBody* const body, const dFloat* const matrix);
NEWTON_API void  NewtonBodySetMassMatrix (const NewtonBody* const body, dFloat mass, dFloat Ixx, dFloat Iyy, dFloat Izz);
NEWTON_API void  NewtonBodySetMaterialGroupID (const NewtonBody* const body, int id);
NEWTON_API void  NewtonBodySetContinuousCollisionMode (const NewtonBody* const body, unsigned state);
NEWTON_API void  NewtonBodySetJointRecursiveCollision (const NewtonBody* const body, unsigned state);
NEWTON_API void  NewtonBodySetOmega (const NewtonBody* const body, const dFloat* const omega);
NEWTON_API void  NewtonBodySetVelocity (const NewtonBody* const body, const dFloat* const velocity);
NEWTON_API void  NewtonBodySetForce (const NewtonBody* const body, const dFloat* const force);
NEWTON_API void  NewtonBodySetTorque (const NewtonBody* const body, const dFloat* const torque);
NEWTON_API void  NewtonBodySetCentreOfMass  (const NewtonBody* const body, const dFloat* const com);
NEWTON_API void  NewtonBodySetLinearDamping (const NewtonBody* const body, dFloat linearDamp);
NEWTON_API void  NewtonBodySetAngularDamping (const NewtonBody* const body, const dFloat* const angularDamp);
NEWTON_API void  NewtonBodySetUserData (const NewtonBody* const body, void* const userData);
NEWTON_API void  NewtonBodySetCollision (const NewtonBody* const body, const NewtonCollision* const collision);
NEWTON_API int  NewtonBodyGetSleepState (const NewtonBody* const body);
NEWTON_API int  NewtonBodyGetAutoSleep (const NewtonBody* const body);
NEWTON_API void NewtonBodySetAutoSleep (const NewtonBody* const body, int state);
NEWTON_API int  NewtonBodyGetFreezeState(const NewtonBody* const body);
NEWTON_API void NewtonBodySetFreezeState (const NewtonBody* const body, int state);
// NEWTON_API void NewtonBodySetAutoFreeze(const NewtonBody* const body, int state);
// NEWTON_API void NewtonBodyCoriolisForcesMode (const NewtonBody* const body, int mode);
// NEWTON_API void NewtonBodySetGyroscopicForcesMode (const NewtonBody* const body, int mode);
// NEWTON_API int  NewtonBodyGetGyroscopicForcesMode (const NewtonBody* const body);
// NEWTON_API int  NewtonBodyGetFreezeState (const NewtonBody* const body);
// NEWTON_API void NewtonBodySetFreezeState  (const NewtonBody* const body, int state);
// NEWTON_API void NewtonBodyGetFreezeTreshold (const NewtonBody* const body, dFloat* freezeSpeed2, dFloat* freezeOmega2);
// NEWTON_API void NewtonBodySetFreezeTreshold (const NewtonBody* const body, dFloat freezeSpeed2, dFloat freezeOmega2, int framesCount);
// NEWTON_API void NewtonBodySetAutoactiveCallback (const NewtonBody* const body, NewtonBodyActivationState callback);


NEWTON_API void  NewtonBodySetDestructorCallback (const NewtonBody* const body, NewtonBodyDestructor callback);
NEWTON_API void  NewtonBodySetTransformCallback (const NewtonBody* const body, NewtonSetTransform callback);
NEWTON_API NewtonSetTransform NewtonBodyGetTransformCallback (const NewtonBody* const body);
NEWTON_API void  NewtonBodySetForceAndTorqueCallback (const NewtonBody* const body, NewtonApplyForceAndTorque callback);
NEWTON_API NewtonApplyForceAndTorque NewtonBodyGetForceAndTorqueCallback (const NewtonBody* const body);
NEWTON_API void* NewtonBodyGetUserData (const NewtonBody* const body);
NEWTON_API NewtonWorld* NewtonBodyGetWorld (const NewtonBody* const body);
NEWTON_API NewtonCollision* NewtonBodyGetCollision (const NewtonBody* const body);
NEWTON_API int   NewtonBodyGetMaterialGroupID (const NewtonBody* const body);
NEWTON_API int   NewtonBodyGetContinuousCollisionMode (const NewtonBody* const body);
NEWTON_API int   NewtonBodyGetJointRecursiveCollision (const NewtonBody* const body);