Src/Newt/NewtonDynamics/Import/DllImports.cs


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonCollisionPointDistance(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] point, IntPtr collision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] contact, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normal, int threadIndex);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonCollisionClosestPoint(IntPtr newtonWorld, IntPtr collisionA, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrixA, IntPtr collisionB, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrixB, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] contactA, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] contactB, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normalAB, int threadIndex);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonCollisionCollide(IntPtr newtonWorld, int maxSize, IntPtr collisionA, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrixA, IntPtr collisionB, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrixB, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] contacts, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normals, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] penetration, int threadIndex);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonCollisionCollideContinue(IntPtr newtonWorld, int maxSize, float timestep, IntPtr collisionA, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrixA, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] velocA, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] omegaA, IntPtr collisionB, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrixB, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] velocB, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] omegaB, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]float[] timeOfImpact, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] contacts, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normals, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] penetration, int threadIndex);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCollisionSupportVertex(IntPtr collision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] dir, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vertex);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonCollisionRayCast(IntPtr collision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p1, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normal, ref int attribute);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCollisionCalculateAABB(IntPtr collision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p1);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCollisionForEachPolygonDo(IntPtr collision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix, NewtonCollisionIterator callback, IntPtr userData);

		#endregion

		#region transforms utility functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonGetEulerAngle([MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] eulersAngles);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetEulerAngle([MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] eulersAngles, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonCalculateSpringDamperAcceleration(float dt, float ks, float x, float kd, float s);

		#endregion

		#region body manipulation functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateBody(IntPtr newtonWorld, IntPtr collision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonDestroyBody(IntPtr newtonWorld, IntPtr body);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyAddForce(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] force);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyAddTorque(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] torque);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyCalculateInverseDynamicsForce(IntPtr body, float timestep, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] desiredVeloc, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] forceOut);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetMatrix(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetMatrixRecursive(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetMassMatrix(IntPtr body, float mass, float Ixx, float Iyy, float Izz);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetMaterialGroupID(IntPtr body, int id);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetContinuousCollisionMode(IntPtr body, uint state);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetJointRecursiveCollision(IntPtr body, uint state);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetOmega(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] omega);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetVelocity(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] velocity);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetForce(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] force);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetTorque(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] torque);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetCentreOfMass(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] com);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetLinearDamping(IntPtr body, float linearDamp);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetAngularDamping(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] angularDamp);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetUserData(IntPtr body, IntPtr userData);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetCollision(IntPtr body, IntPtr collision);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBodyGetSleepState(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBodyGetAutoSleep(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetAutoSleep(IntPtr body, int state);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBodyGetFreezeState(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetFreezeState(IntPtr body, int state);


		//	internal static extern void NewtonBodySetAutoFreeze(IntPtr body, int state);
		//	internal static extern void NewtonBodyCoriolisForcesMode (IntPtr body, int mode);
		//	internal static extern void NewtonBodySetGyroscopicForcesMode (IntPtr body, int mode);
		//	internal static extern int  NewtonBodyGetGyroscopicForcesMode (IntPtr body);
		//	internal static extern int  NewtonBodyGetFreezeState (IntPtr body);
		//	internal static extern void NewtonBodySetFreezeState  (IntPtr body, int state);
		//	internal static extern void NewtonBodyGetFreezeTreshold (IntPtr body, dFloat* freezeSpeed2, dFloat* freezeOmega2);
		//	internal static extern void NewtonBodySetFreezeTreshold (IntPtr body, dFloat freezeSpeed2, dFloat freezeOmega2, int framesCount);
		//	internal static extern void NewtonBodySetAutoactiveCallback (IntPtr body, NewtonBodyActivationState callback);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetDestructorCallback(IntPtr body, NewtonBodyDestructor callback);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetTransformCallback(IntPtr body, NewtonSetTransform callback);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern NewtonSetTransform NewtonBodyGetTransformCallback(IntPtr body);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodySetForceAndTorqueCallback(IntPtr body, NewtonApplyForceAndTorque callback);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern NewtonApplyForceAndTorque NewtonBodyGetForceAndTorqueCallback(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBodyGetUserData(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBodyGetWorld(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBodyGetCollision(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBodyGetMaterialGroupID(IntPtr body);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBodyGetContinuousCollisionMode(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBodyGetJointRecursiveCollision(IntPtr body);

